Verify registration form validations

--- a/src/app/modules/core/components/verify-register/verify-register.component.html
+++ b/src/app/modules/core/components/verify-register/verify-register.component.html
@@ -4,7 +4,7 @@
     <p class="h4 mb-4">Verify Registration</p>
   
     <!-- Email -->
-    <input type="email" formControlName="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+    <input type="email" formControlName="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail" readonly>
   
     <!-- Password -->
     <input type="text"  formControlName="token"   id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Verification Code">
