Create Workspace module - listing and form

--- a/src/app/modules/core/components/login/login.component.html
+++ b/src/app/modules/core/components/login/login.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="footer">
           <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary mt-2 float-right" type="submit">Sign in</button>
-          <small>Don't have an account? <a [routerLink]="['/register']">Register here.</a></small>
+          <small class="pr-3">Don't have an account? <a [routerLink]="['/register']">Register here.</a></small>
         </div>
       </form>
     </div>
